[metadata]
name = project
version = 1.0
summary = Project Sample
description-file =
    README.rst
author = Joseph15
author-email = joseph15@yeah.net
home-page = http://www.xxx.org/
classifier =
    Environment :: Project
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Topic :: System :: Monitoring

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    project

[entry_points]
console_scripts = 
	project = project.xxx.xxx:xxx

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source
